--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Spot Play",
-  "description": "One-Click Spotify Playlist Player in your Browser.",
+  "name": "Chill beats",
+  "description": "One-Click Spotify/Soundcloud Playlist Player in your Browser.",
   "version": "1.0.0",
   "manifest_version": 3,
   "icons": {
